force-app/main/default/objects/SystemSetting__c/SystemSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Setting</label>
</CustomObject>