force-app/main/default/objects/SystemSetting__c/fields/EnableDefaultMembershipProduct__c.field-meta.xml
<CustomField>
    <fullName>EnableDefaultMembershipProduct__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enable Default Membership Product,This default add membership product as soon new application started</description>
    <inlineHelpText>Enable Default Membership Product</inlineHelpText>
    <label>Enable Default Membership Product</label>
    <type>Checkbox</type>
</CustomField>