force-app/main/default/objects/SystemSetting__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow</label>
    <type>Checkbox</type>
</CustomField>