force-app/main/default/objects/SystemSetting__c/fields/KYCEvaluation__c.field-meta.xml
<CustomField>
    <fullName>KYCEvaluation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>KYC Evaluation to be done or not for the applicants</description>
    <label>KYCEvaluation</label>
    <type>Checkbox</type>
</CustomField>