force-app/main/default/objects/SystemSetting__c/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <description>Support Values are Error,Debug,Info and Fine</description>
    <inlineHelpText
  >Support Values are Error,Debug,Info and Fine</inlineHelpText>
    <label>Logging Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>