force-app/main/default/objects/SystemSetting__c/fields/SentiLink__c.field-meta.xml
<CustomField>
    <fullName>SentiLink__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enabled/Disabled Senti Link API</description>
    <inlineHelpText>Enabled/Disabled Senti Link API</inlineHelpText>
    <label>Senti Link</label>
    <type>Checkbox</type>
</CustomField>